--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,10 @@
 {
-  "parser": "@typescript-eslint/parser",
   "extends": [
     "react-app",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended"
   ],
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["prettier", "@typescript-eslint"],
   "rules": {
     "prettier/prettier": ["error", {
       "endOfLine": "auto",
@@ -18,7 +17,6 @@
       "jsxBracketSameLine": false,
       "arrowParens": "avoid"
     }],
-    "@typescript-eslint/explicit-module-boundary-types": "off",
     "indent": ["error", 2],
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "import/extensions": [
@@ -30,8 +28,21 @@
       }
     ],
     "react/react-in-jsx-scope": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off"
   },
+  "overrides": [
+    {
+      "files": ["*.ts", "*.tsx"],
+      "parser": "@typescript-eslint/parser",
+      "parserOptions": {
+        "project": "./tsconfig.json"
+      },
+      "rules": {
+        "@typescript-eslint/explicit-module-boundary-types": "off"
+      }
+    }
+  ],
   "settings": {
     "import/resolver": {
       "node": {
